--- a/Heart-up/Info.plist
+++ b/Heart-up/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>位置情報をこのアプリの起動時に使います</string>
 </dict>
 </plist>
